[gd_scene load_steps=8 format=2]

[ext_resource path="res://Themes/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/UI/Menus/EndLevelScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/UI/Menus/Buttons/TitleButtons/Quit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/Menus/Buttons/Continue.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.0784314, 0.101961, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="EndLevelScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 540.0
margin_bottom = 310.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 10.0
margin_right = 525.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelComplete" type="Label" parent="VBoxContainer"]
margin_right = 510.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Level 1-1 complete!"
align = 1
valign = 1
uppercase = true

[node name="Center" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 510.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Text" type="VBoxContainer" parent="VBoxContainer/Center"]
margin_right = 266.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/separation = 17

[node name="NewRec" type="Label" parent="VBoxContainer/Center/Text"]
margin_right = 266.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.87451, 0.0431373, 1 )
text = "New Record!"
align = 1

[node name="Time" type="Label" parent="VBoxContainer/Center/Text"]
margin_top = 31.0
margin_right = 266.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 1 )
text = "Time: 06.56"

[node name="Kills" type="Label" parent="VBoxContainer/Center/Text"]
margin_top = 62.0
margin_right = 266.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 1 )
text = "Killed Monsters: 57"

[node name="Gold" type="Label" parent="VBoxContainer/Center/Text"]
margin_top = 93.0
margin_right = 266.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 1 )
text = "Gold earned: 57"

[node name="LostHP" type="Label" parent="VBoxContainer/Center/Text"]
margin_top = 124.0
margin_right = 266.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 1 )
text = "Lost HP: 2"

[node name="MapExpl" type="Label" parent="VBoxContainer/Center/Text"]
margin_top = 155.0
margin_right = 266.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 1 )
text = "Map explored: 80%"

[node name="Score" type="Label" parent="VBoxContainer/Center/Text"]
margin_top = 186.0
margin_right = 266.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource( 1 )
text = "= Score: 1490"

[node name="Minimap" type="Panel" parent="VBoxContainer/Center"]
margin_left = 270.0
margin_right = 510.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 510.0
margin_bottom = 280.0
size_flags_horizontal = 3
custom_constants/separation = 40

[node name="Quit" parent="VBoxContainer/Buttons" instance=ExtResource( 4 )]
margin_left = 0.0
margin_right = 235.0
size_flags_horizontal = 3
text = "Quit game"

[node name="Continue" parent="VBoxContainer/Buttons" instance=ExtResource( 5 )]
margin_left = 275.0
margin_right = 510.0
size_flags_horizontal = 3
